# jas

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: build.yaml
.sqlx/: query-04af24b3f819bab270fa40d6524f55e19d38e75822fc8659cce9b8edb8c6f033.json  query-0b421b60fdefad3cdf1c76d252e2fff04eb99ed7e71505af1587f8a0a2c7976f.json  query-102e11c99218d0c23b469d1c7e6b39315cc6410505d2bee753b9c2b3f646671e.json  query-15aa8b0feb33f9bc22934a74e08351e3a7001bcac56cad373c919c1d22ef6dd9.json  query-172f38f8ec17b4e1e941454f8f5b580e72096a2372e1fc8400024705830dae12.json  query-24e56c0fb541fb60fc8e9114de1f6d3b914acaf9cf000b730d70541ce5928c57.json  query-29c1afa480c878f277a650b2f6e224b996a46bf7b0adcbc0743e94405a1a6678.json  query-2dffd1675e3335c11b85ff0130ef1a0b7976f77701cb8ebd2998f33574e0fa5b.json  query-36cbf9197cdc686d480fdd0a417a03c60aecd28c4664777b9824e348e0ed71ce.json  query-4225f721f85004dd89fcf763fc24d236c0843b1c02643f4e660f6e4c55a8b040.json  query-55283c2c80cbddbb429c53869c259859002c5eded60fd648b80e2f658ede413f.json  query-6857888c06de9fa575cdc2981557d85dbc6ec4666b2ccb9156ca14b9f18ec17d.json  query-699519e2405079a201c87ff166fd1d62fca2f8d1c35c35a7953ca0c8b430e9c2.json  query-715d644aed14ec1a5a3d49c8ec8add738d26479fd44e57ae1299445f650f7923.json  query-73b95d99c3e7daef69d0e385824d278bbca7df7f85e2b22e7a8b7a3edbbb061e.json  query-7807b9fc3c18631fc49efa407d9660ef32ece1035031499f94222769b65b887a.json  query-79ecd48f34cc165609b22ab904c038331ac1949101f2b852fc149b4dad952150.json  query-8195ffe1a3c88ee83f9e9dd5f22e64286e039e58527add62a8b8532a86919293.json  query-8c8a764f9dde82317f2eb10cb45c9bc80be5ccfe5971cb1c172feb5f8b7257b6.json  query-8d159d207a29772ee81c1f005eae9654c70874b294f5ffe2991afd904574ac31.json  query-949278c8308e013906f68bd0514c3bf4927218eb2b15c92ab73d23ed0ce177b0.json  query-b3ab68e8d6c53b7e723e507c4af9e97d0eb5a90cbf8792322334c0e5545d7def.json  query-bcc5757f7c512d922d4eb40388fcf91093d617926634bc949f9343080eedbaee.json  query-bce9f3e12d1a02fa6fe5c27b58a587e5493f840cde8c704623bc88fb7e1219f8.json  query-bf00f98fa574ee381768684f7516aad02e897920e46939b5ec7842812f2a6e09.json  query-cbfc837f5f5e0fe6ef243437e30072dd7275ec58effd2dbf890adeca6b327ccc.json  query-d34e3890faec98c00522f8dfac7e410712e28e873540c19f27bb02113e98be40.json  query-d99df7522ddf1836eae40922a01e50078ae037cea455756bbb05e5f44d013d14.json  query-d9b3179b3aa9caea30dbd03621e8669358a3e2da979784e407954e7d4d374043.json  query-f3bebd75f71516c5176c9321fbf92952f4360551c42b15ff07761ec154796390.json  query-fa091462c5fce70a37ac515e57f9b9404e6060884e5418dc8d2b9bb3cbde5695.json
migrations/: 001_initial.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/components/: mod.rs
src/app/pages/: accounts.rs  dashboard.rs  device_detail.rs  devices.rs  mod.rs  queue.rs  settings.rs
src/server/: config.rs  crypto.rs  mdns.rs  mod.rs  state.rs
src/server/db/: mod.rs  storage.rs
src/server/scheduler/: mod.rs
src/server/sideload/: mod.rs
style/: main.scss
